Added sub info sidebar Initial placeholder username dropdown menu stylings related to both in parent comps Added home icon Added close button in video modal Fixed gallery not keeping index between inline and modal view

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,10 +120,13 @@ display: flex;
 .vidPlayer > div {
 height: 100%;
 }
-.dialog > div {
+.dialog > .backdrop {
 height: 100%;
 }
 
+.dialog:has(.zoomed) .xbutton {
+position: sticky;
+left: 100%;}
 .gal-prev::before {
 content: "";
   width: 50%;
